--- a/src/main/resources/assets/tutorialmod/lang/en_US.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_US.json
@@ -5,5 +5,5 @@
   "block.tutorialmod.ruby_block": "Block of Ruby",
   "block.tutorialmod.raw_ruby_block": "Block of Raw Ruby",
 
-  "itemgroup.ruby": "Ruby Group"
+  "itemgroup.ruby": "Tutorial Mod"
 }
